src/main/java/org/example/plzdrawing/common/error/ErrorCode.java
package org.example.plzdrawing.common.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    String getCode();
    HttpStatus getHttpStatus();
    String getMessage();
}
